# opencv_car_count

./: README.md
cpp/: CMakeLists.txt  main.cpp
python/: car_count.py
